--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.2",
+        "use-debounce": "^10.0.5",
         "vite": "^7.0.4"
     },
     "optionalDependencies": {
