--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@eslint/js": "^9.19.0",
         "@types/leaflet": "^1.9.20",
         "@types/node": "^22.13.5",
+        "@types/recharts": "^1.8.29",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-react": "^7.37.3",
@@ -60,6 +61,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-leaflet": "^5.0.0",
+        "recharts": "^3.1.2",
         "sonner": "^1.7.4",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
