Add bashrc sourcing to deployment scripts for environment configuration

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
 
           script: |
-            /home/rgentradas-deployer/deploy.sh testr2002 testing test.rgentradas.com
+            . /home/rgentradas-deployer/.bashrc && /home/rgentradas-deployer/deploy.sh testr2002 testing test.rgentradas.com
 
   deploy-production:
     if: github.ref == 'refs/heads/main'
@@ -37,4 +37,4 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           
           script: |
-            /home/rgentradas-deployer/deploy.sh rgent6815 main rgentradas.com
+            . /home/rgentradas-deployer/.bashrc && /home/rgentradas-deployer/deploy.sh rgent6815 main rgentradas.com
