--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "decidir2/php-sdk": "^2.0",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "tightenco/ziggy": "^2.4"
