--- a/.env.testing
+++ b/.env.testing
@@ -1,28 +1,25 @@
 APP_NAME=Ticketera
 APP_ENV=testing
-APP_KEY=
+APP_KEY=base64:eLVZa6ShzzSuAMTtI0dEiQtND+RvQpPJKCHrnZYKIKo=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=ticketera_test
-DB_USERNAME=root
-DB_PASSWORD=password
+DB_CONNECTION=sqlite
+DB_DATABASE=:memory:
 
-CACHE_DRIVER=redis
+CACHE_STORE=array
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=array
 SESSION_LIFETIME=120
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
 
 MAIL_MAILER=array
 
 DECIDIR_PUBLIC_KEY=test_key
 DECIDIR_PRIVATE_KEY=test_key
 DECIDIR_SANDBOX=true
+
+REDIS_CLIENT=phpredis
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
