--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-leaflet": "^5.0.0",
+        "react-qr-code": "^2.0.18",
         "recharts": "^3.1.2",
         "sonner": "^1.7.4",
         "tailwind-merge": "^3.0.1",
