--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@tailwindcss/typography": "^0.5.19",
         "@tailwindcss/vite": "^4.1.11",
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
@@ -55,6 +56,7 @@
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "concurrently": "^9.0.1",
+        "dompurify": "^3.3.1",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^2.0",
         "leaflet": "^1.9.4",
@@ -63,6 +65,7 @@
         "react-dom": "^19.0.0",
         "react-leaflet": "^5.0.0",
         "react-qr-code": "^2.0.18",
+        "react-quill-new": "^3.7.0",
         "recharts": "^3.1.2",
         "sonner": "^1.7.4",
         "tailwind-merge": "^3.0.1",
