--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/sortable": "^10.0.0",
         "@dnd-kit/utilities": "^3.2.2",
+        "@fingerprintjs/fingerprintjs": "^5.0.1",
         "@headlessui/react": "^2.2.0",
         "@inertiajs/react": "^2.0.0",
         "@radix-ui/react-alert-dialog": "^1.1.14",
